--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div class="root">
-        <label class="upload__button" for="upload">
-            Upload image
-        </label>
-        <input type="file" accept="image/*" id="upload" class="upload__input" />
+		<button class="upload__button">
+			<label for="upload-input" class="upload__label">
+				Upload image
+			</label>
+		</button>
+        <input type="file" accept="image/*" id="upload-input" class="upload__input" />
     </div>
     <script type="module" src="./index.js"></script>
 </body>
