--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 <body>
     <div class="root">
 		<button class="upload__button">
-			<label for="upload-input" class="upload__label">
+			<label for="upload" class="upload__label">
 				Upload image
 			</label>
 		</button>
-        <input type="file" accept="image/*" id="upload-input" class="upload__input" />
+        <input type="file" accept="image/*" id="upload" class="upload__input" />
+		<img src="" id="preview" class="preview">
     </div>
     <script type="module" src="./index.js"></script>
 </body>
