--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,19 @@
 			</label>
 		</button>
         <input type="file" accept="image/*" id="upload" class="upload__input" />
-		<img src="" id="preview" class="preview">
+
+		<table>
+			<thead>
+				<tr>
+					<th>Preview</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><img src="" id="preview"></td>
+				</tr>
+			</tbody>
+		</table>
     </div>
     <script type="module" src="./index.js"></script>
 </body>
