black&white conversion, but it doesn't work

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
 			<thead>
 				<tr>
 					<th>Preview</th>
+					<th>Main thread</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td><img src="" id="preview"></td>
+					<td><img src="" id="main-thread"></td>
 				</tr>
 			</tbody>
 		</table>
